--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ h2 {
     text-align: center;
     font-size: x-small;
   }
+h3 {
+    text-align: center;
+    font-size: xx-large;
+}
+iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
